# routemandu

./: .gitignore  docker-compose.yaml
backend/: .gitignore  apt.txt  build.ps1  build.sh  manage.py  pyproject.toml  startup.ps1
backend/multigtfs/: __init__.py  admin.py  app_settings.py  compat.py  serializers.py  urls.py  views.py
backend/multigtfs/management/commands/: importgtfs.py
backend/multigtfs/migrations/: 0001_initial.py
backend/multigtfs/models/: __init__.py  agency.py  base.py  block.py  fare.py  fare_rule.py  feed.py  feed_info.py  frequency.py  route.py  service.py  service_date.py  shape.py  stop.py  stop_time.py  transfer.py  trip.py
backend/multigtfs/tests/: test_feed.py
backend/output/20260710/: timetable.pcl
backend/output/20260714/: timetable.pcl
backend/output/20260716/: timetable.pcl
backend/project/: asgi.py  base_settings.py  deployment_settings.py  settings.py  urls.py  wsgi.py
backend/ptas/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/ptas/migrations/: 0001_initial.py  0002_alter_publictransitagency_color.py
backend/raptor/: apps.py  query_raptor.py  serializers.py  services.py  urls.py  views.py
backend/raptor/dao/: __init__.py  timetable_io.py
backend/raptor/gtfs/: timetable.py
backend/raptor/models/: raptor.py  structures.py
backend/raptor/tests/: factories.py  test_services.py  test_util.py  test_views.py
backend/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: index.html  (+3 more)
(+51 files in other folders)
