[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "attrs>=26.1.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-templated-email>=3.1.1",
    "djangorestframework>=3.17.1",
    "djoser>=2.3.3",
    "gunicorn>=26.0.0",
    "ipython>=9.13.0",
    "joblib>=1.5.3",
    "jsonfield>=3.2.0",
    "loguru>=0.7.3",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "python-decouple>=3.8",
    "uvicorn>=0.51.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=7.0.0",
    "django-silk>=5.5.0",
]
